# reteneitor3000

./: CMakeLists.txt  Makefile  README.md  main.cpp  reteneitor3000  reteneitor3000.cpp  reteneitor3000.h  reteneitor3000.pro  reteneitor3000.qrc  reteneitor3000.ui
cmake/modules/: FindFestival.cmake  FindFestivallan.cmake  FindSox.cmake
