CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( RETENEITOR3000 )
SET( RETENEITOR3000_SRCS
     ${CMAKE_SOURCE_DIR}/main.cpp
     ${CMAKE_SOURCE_DIR}/reteneitor3000.cpp
   )

SET( RETENEITOR3000_MOC_HDRS
     ${CMAKE_SOURCE_DIR}/reteneitor3000.h
   )

SET( RETENEITOR3000_UIS
     ${CMAKE_SOURCE_DIR}/reteneitor3000.ui
   )

SET( RETENEITOR3000_RCS
     ${CMAKE_SOURCE_DIR}/reteneitor3000.qrc
   )

SET(BIN_INSTALL_DIR
    "/bin"
    CACHE PATH "The subdirectory relative to the install prefix for executables (default is bin)"
   )

SET(DATA_INSTALL_DIR
    "/share"
    CACHE PATH "The subdirectory relative to the install prefix where shared data will be installed (default is share)."
   )


FIND_PACKAGE( X11 REQUIRED )
FIND_PACKAGE( Qt4 REQUIRED )
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/")
FIND_PACKAGE( Sox REQUIRED )
FIND_PACKAGE( Festival REQUIRED )

INCLUDE( ${QT_USE_FILE} )

QT4_ADD_RESOURCES( RETENEITOR3000_RC_SRCS ${RETENEITOR3000_RCS} )
QT4_WRAP_UI( RETENEITOR3000_UI_HDRS ${RETENEITOR3000_UIS} )
QT4_WRAP_CPP( RETENEITOR3000_MOC_SRCS ${RETENEITOR3000_MOC_HDRS} )

INCLUDE_DIRECTORIES( "${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

ADD_EXECUTABLE( reteneitor3000 ${RETENEITOR3000_SRCS} ${RETENEITOR3000_MOC_SRCS} ${RETENEITOR3000_RC_SRCS} ${RETENEITOR3000_UI_HDRS} )
TARGET_LINK_LIBRARIES( reteneitor3000 ${QT_LIBRARIES})
 






